<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".ChartFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputAttributteName"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp"
        android:layout_marginBottom="10dp"
        android:hint="@string/select_attribute"
        app:boxCornerRadiusBottomEnd="10sp"
        app:boxCornerRadiusBottomStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusTopStart="10sp"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp"
        app:layout_constraintBottom_toTopOf="@+id/inputLayoutTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/inputTVAttributteName"
            android:layout_width="360dp"
            android:layout_height="55dp"
            android:inputType="none"
            app:simpleItems="@array/Attribute_list" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutTimer"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp"
        android:layout_marginBottom="10dp"
        android:hint="@string/select_timer"
        app:boxCornerRadiusBottomEnd="10sp"
        app:boxCornerRadiusBottomStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusTopStart="10sp"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp"
        app:layout_constraintBottom_toTopOf="@+id/inputLayoutDialogTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/inputTVTimer"
            android:layout_width="360dp"
            android:layout_height="55dp"
            android:inputType="none"
            app:simpleItems="@array/Timer_list" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutDialogTimer"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="25sp"
        android:layout_marginEnd="25sp"
        android:layout_marginBottom="20dp"
        android:hint="@string/select_date"
        app:boxCornerRadiusBottomEnd="10sp"
        app:boxCornerRadiusBottomStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusTopStart="10sp"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp"
        app:layout_constraintBottom_toTopOf="@+id/btnShowChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/inputTVDialogTimer"
            android:layout_width="360dp"
            android:layout_height="55dp"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="410dp"
        android:layout_height="380dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnShowChart"
        android:layout_width="336dp"
        android:layout_height="66dp"
        android:layout_marginBottom="50dp"
        android:text="@string/show_chart"
        android:textColor="@color/white"
        android:textSize="23dp"
        android:textStyle="bold"
        android:background="@drawable/custom_button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>
